--- a/src/JobComp/JobCard.css
+++ b/src/JobComp/JobCard.css
@@ -1,6 +1,6 @@
 .loader {
-    width:fit-content;
-    height:fit-content;
+    width: 120px;
+    height: 20px;
     background:
      linear-gradient(#000 0 0) 0/0% no-repeat
      #ddd;
