--- a/src/JobComp/JobForm.css
+++ b/src/JobComp/JobForm.css
@@ -1,7 +1,7 @@
 /* HTML: <div class="loader"></div> */
 .loader {
-    width:fit-content;
-    height:fit-content;
+    width: 120px;
+    height: 20px;
     background:
      linear-gradient(#000 0 0) 0/0% no-repeat
      #ddd;
