--- a/src/JobComp/JobCard.css
+++ b/src/JobComp/JobCard.css
@@ -1,11 +1,18 @@
+/* HTML: <div class="loader"></div> */
 .loader {
-    width: 120px;
-    height: 20px;
-    background:
-     linear-gradient(#000 0 0) 0/0% no-repeat
-     #ddd;
-    animation: l1 2s infinite linear;
+    width: 60px;
+    aspect-ratio: 2;
+    --_g: no-repeat radial-gradient(circle closest-side,#000 90%,#0000);
+    background: 
+      var(--_g) 0%   50%,
+      var(--_g) 50%  50%,
+      var(--_g) 100% 50%;
+    background-size: calc(100%/3) 50%;
+    animation: l3 1s infinite linear;
   }
-  @keyframes l1 {
-      100% {background-size:100%}
+  @keyframes l3 {
+      20%{background-position:0%   0%, 50%  50%,100%  50%}
+      40%{background-position:0% 100%, 50%   0%,100%  50%}
+      60%{background-position:0%  50%, 50% 100%,100%   0%}
+      80%{background-position:0%  50%, 50%  50%,100% 100%}
   }
